2002-11-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* eeprom.h: Formatting and punctuation changes.

2002-11-08  Theodore A. Roth  <troth@openavr.org>

	* doc/examples/demo/Makefile: Remove png transparency fix-up since it's
	done later anyways.

2002-11-08  Theodore A. Roth  <troth@openavr.org>

	* doc/INSTALL: Add note about reconf and autoconf/automake.

2002-11-08  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom169.h: Fix typo in UCSR0A register bit def.

2002-11-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/setjmp.h: make -mint8 proof.

2002-11-05  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom8.h: Sync up with latest datasheet (2486H-AVR-09/02).

2002-11-04  Theodore A. Roth  <troth@openavr.org>

	* doc/api/Makefile.am: Fix all pngs to have proper transparency.

2002-11-04  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Updated.
	* include/avr/sleep.h: New file.
	* include/avr/sfr_defs.h: Fix spelling in dox comments.

2002-10-31  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/examples/demo/Makefile: Set eeprom base addr to 0x0.

2002-10-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: fix typo.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am: Make `make demo` less likely to fail.

2002-10-30  Theodore A. Roth  <troth@openavr.org>

	* doc/api/dox.css: Change default html colors.
	* doc/api/dox_html_header: Don't spec body bgcolor.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Fix the fix.

2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Make the addresses used consistent.
	* doc/api/malloc-x*.fig: Ditto.
